# VulkanPlayground

./: .gitmodules  CMakeLists.txt
resources/: test_meshes.glb
shaders/: gradient.comp  mesh.vert  test.comp  triangle.vert
src/: README.md  common.h  main.cpp  renderer.cpp  renderer.h  resource_manager.h  utils.cpp  utils.h
src/parsers/: mesh_parser.cpp  mesh_parser.h
src/render/: descriptor_set.cpp  descriptor_set.h  gpu_buffers.h  gpu_mesh.h  mesh.h  pipeline.cpp  pipeline.h  render_frame.cpp  render_utils.cpp  render_utils.h  renderer.h  renderer_cleanup.cpp  renderer_frame_submission.cpp  renderer_initialization.cpp  renderer_resource_creation.cpp  resources.h  swapchain.cpp  vk_helpers.cpp  vk_helpers.h
src/render/resources/: camera.cpp  camera.h  descriptor_set.cpp  gpu_mesh.h  image_formats.h  pipeline.cpp  pipeline.h  resources.h  swapchain.cpp
src/render/stages/: render_frame.cpp  renderer_cleanup.cpp  renderer_frame_submission.cpp  renderer_initialization.cpp  renderer_resource_creation.cpp
src/utils/: arena_list.h  stack.h
